# ThisIsBurgerTime

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcruntime.hint
.github/workflows/: cmake.yml  purecmake.yml
BurgerTime/: AIControllerComponent.cpp  AIControllerComponent.h  BurgerGroup.cpp  BurgerGroup.h  BurgerGroupComponent.cpp  BurgerGroupComponent.h  BurgerPartComponent.cpp  BurgerPartComponent.h  BurgerState.cpp  BurgerState.h  BurgerTimeLayers.h  BurgerTimeSoundIds.h  CMakeLists.txt  Direction.h  EnemyCommand.cpp  EnemyCommand.h  EnemyComponent.cpp  EnemyComponent.h  EnemyInputComponent.cpp  EnemyInputComponent.h  EnemyInputKeys.h  EnemyState.cpp  EnemyState.h  FPSComponent.cpp  FPSComponent.h  GameMode.cpp  GameMode.h  GridMoveCommand.cpp  GridMoveCommand.h  IControllable.h  InputCommand.cpp  InputCommand.h  InputComponent.cpp  InputComponent.h  LevelGrid.cpp  LevelGrid.h  LivesComponent.cpp  LivesComponent.h  LivesUIComponent.cpp  LivesUIComponent.h  (+16 more)
BurgerTime/Data/: FoodGrid.pdn  Grid.pdn  waste.pdn
Minigin/: BaseComponent.h  ComponentsHeader.h  GameObject.cpp  GameObject.h  Main.cpp  Renderer.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ThrashTheCacheComponent.cpp  ThrashTheCacheComponent.h
